--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -245,49 +245,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="/js/scripts.js"></script>
-    <!--거래희망장소 지도-->
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e133f6ea3b90b5b74b80864ba7037219"></script>
-    <script th:inline="javascript">
-
-        let lat= [[${mtPlace?.lat}]];
-        let lon= [[${mtPlace?.lon}]];
-        let placeInfo= [[${mtPlace?.placeInfo}]];
-        console.log(lat,lon,placeInfo)
-
-        if([[${mtPlace}]] !== null) {
-            var mapContainer = document.getElementById('map'), // 지도를 표시할 div
-                mapOption = {
-                    center: new kakao.maps.LatLng(lat, lon), // 지도의 중심좌표
-                    level: 3 // 지도의 확대 레벨
-                };
-
-            var map = new kakao.maps.Map(mapContainer, mapOption);
-
-            // 마커가 표시될 위치입니다
-            var markerPosition = new kakao.maps.LatLng(lat, lon);
-
-            // 마커를 생성합니다
-            var marker = new kakao.maps.Marker({
-                position: markerPosition
-            });
-
-            // 마커가 지도 위에 표시되도록 설정합니다
-            marker.setMap(map);
-
-            var iwContent = `<div style="padding:5px;">${placeInfo} <br><a href="https://map.kakao.com/link/map/${placeInfo},${lat},${lon}" style="color:blue" target="_blank">큰지도보기</a> <a href="https://map.kakao.com/link/to/${placeInfo},${lat},${lon}" style="color:blue" target="_blank">길찾기</a></div>`, // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
-                iwPosition = new kakao.maps.LatLng(lat, lon); //인포윈도우 표시 위치입니다
-
-            // 인포윈도우를 생성합니다
-            var infowindow = new kakao.maps.InfoWindow({
-                position: iwPosition,
-                content: iwContent
-            });
-
-            // 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
-            infowindow.open(map, marker);
-        }
-
-    </script>
 
         <!--사진 박스슬라이더-->
         <script>
@@ -364,8 +321,14 @@
                     data: data,
                     success: function(result){
                         console.log(result);
+                        if(result == "판매완료"){
+                            let truefalse = confirm("후기를 작성하시겠습니까?")
+                            if(truefalse==true){
+
+                            }
+                        }
                         //화면 처리
-                        alert(result);
+                        alert(result+"로 변경되었습니다.");
                         // location.reload();
                     },
                     error: function(jqXHR, textStatus, errorThrown){
@@ -376,6 +339,51 @@
             }
         </script>
 
+
+
+        <!--거래희망장소 지도-->
+        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e133f6ea3b90b5b74b80864ba7037219"></script>
+        <script th:inline="javascript">
+
+            let lat= [[${mtPlace?.lat}]];
+            let lon= [[${mtPlace?.lon}]];
+            let placeInfo= [[${mtPlace?.placeInfo}]];
+            console.log(lat,lon,placeInfo)
+
+            if([[${mtPlace}]] !== null) {
+                var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+                    mapOption = {
+                        center: new kakao.maps.LatLng(lat, lon), // 지도의 중심좌표
+                        level: 3 // 지도의 확대 레벨
+                    };
+
+                var map = new kakao.maps.Map(mapContainer, mapOption);
+
+                // 마커가 표시될 위치입니다
+                var markerPosition = new kakao.maps.LatLng(lat, lon);
+
+                // 마커를 생성합니다
+                var marker = new kakao.maps.Marker({
+                    position: markerPosition
+                });
+
+                // 마커가 지도 위에 표시되도록 설정합니다
+                marker.setMap(map);
+
+                var iwContent = `<div style="padding:5px;">${placeInfo} <br><a href="https://map.kakao.com/link/map/${placeInfo},${lat},${lon}" style="color:blue" target="_blank">큰지도보기</a> <a href="https://map.kakao.com/link/to/${placeInfo},${lat},${lon}" style="color:blue" target="_blank">길찾기</a></div>`, // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+                    iwPosition = new kakao.maps.LatLng(lat, lon); //인포윈도우 표시 위치입니다
+
+                // 인포윈도우를 생성합니다
+                var infowindow = new kakao.maps.InfoWindow({
+                    position: iwPosition,
+                    content: iwContent
+                });
+
+                // 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
+                infowindow.open(map, marker);
+            }
+
+        </script>
 
 
     </body>
