sellList,buyerList삭제, Trade테이블 추가

--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -81,6 +81,16 @@
                 connect();
             }
         </script>
+        <script th:inline="javascript">
+            function loginOutKakao() {
+                $.ajax({
+                    url: '/logout/getKakaoLogoutURL',
+                    type: 'get',
+                }).done(function (res) {
+                    location.href = res;
+                });
+            }
+        </script>
     </body>
 
 </html>
