--- a/src/main/resources/templates/member/loginForm.html
+++ b/src/main/resources/templates/member/loginForm.html
@@ -16,6 +16,13 @@
       border-color: #dc3545;
       color: #dc3545;
     }
+    /*#kakao {*/
+    /*  width: 100px;*/
+    /*}*/
+    #kakao img{
+      width: 300px;
+      cursor: pointer;
+    }
   </style>
 </head>
 
@@ -66,7 +73,10 @@
         </div>
       </div>
       <div class="row">
-        <div id="google"></div>
+        <div id="google"> </div>
+      </div>
+      <div class="row" id="kakao" th:onclick="loginWithKakao()">
+          <img src="/css/images/login/kakao_login.png">
       </div>
     </form>
   </div> <!-- /form-container -->
@@ -76,7 +86,7 @@
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script src="https://accounts.google.com/gsi/client?hl=kr" async defer></script>
   <script th:inline="javascript">
-    function handleCredentialResponse(response) {
+/*    function handleCredentialResponse(response) {
       console.log("Encoded JWT ID token: " + response.credential);
       const responsePayload = decodeJwtResponse(response.credential);
 
@@ -97,24 +107,17 @@
               { theme: "outline", size: "large" }  // customization attributes
       );
       google.accounts.id.prompt(); // also display the One Tap dialog
-    }
-    function parseJwt (token) {
-      var base64Url = token.split('.')[1];
-      var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
-      var jsonPayload = decodeURIComponent(atob(base64).split('').map(function(c) {
-        return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
-      }).join(''));
+    }*/
 
-      return JSON.parse(jsonPayload);
-    };
-/*    function loginWithGoogle() {
+    function loginWithKakao() {
       $.ajax({
-        url: '/login/getGoogleAuthUrl',
+        url: '/login/getKakaoLoginURL',
         type: 'get',
       }).done(function (res) {
         location.href = res;
       });
-    }*/
+    }
+
   </script>
 </div>
 </html>
