카카오 로그인 api추가

--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -82,7 +82,7 @@
             }
         </script>
         <script th:inline="javascript">
-            function loginOutKakao() {
+            function logoutWithKakao() {
                 $.ajax({
                     url: '/logout/getKakaoLogoutURL',
                     type: 'get',
