--- a/src/main/resources/templates/member/signupForm.html
+++ b/src/main/resources/templates/member/signupForm.html
@@ -16,6 +16,9 @@
             border-color: #dc3545;
             color: #dc3545;
         }
+        .field-error-border {
+            border-color: #dc3545;
+        }
     </style>
 </head>
 
@@ -24,57 +27,94 @@
     <div class="py-5 text-center">
         <h2>회원 가입</h2>
     </div>
+
     <div th:if="${isSocial}">
-        <h4 class="mb-3">내 동네 입력</h4>
-            <label for="locSocial">내 동네</label>
-            <select id="locSocial"  th:onchange="locTest()" name="locSocial">
-                <option th:each="locValue:${T(com.exercise.carrotproject.domain.enumList.Loc).values()}"
-                        th:value="${locValue}"
-                        th:text="${locValue.locName}"></option>
-            </select>
-    </div>
-
-    <form action="" th:action th:object="${signupForm}" method="post">
-        <div th:unless="${isSocial}">
-            <h4 class="mb-3">회원 정보 입력</h4>
+        <h6>
+            [[${platform}]]로 로그인되었습니다. [[${platform}]]계정으로 망고마켓 가입이 필요합니다.
+        </h6>
+        </hr>
+        <form id="socialForm">
+            <h4 class="mb-3">프로필 입력</h4>
+            <input type="hidden" id="email" th:value="${userInfo.get('email')}">
+            <input type="hidden" id="profPath" th:value="${userInfo.get('profPath')}">
             <div>
-                <label for="memId">아이디</label>
-                <input type="text" id="memId" th:field="*{memId}"
-                       class="formcontrol"
-                       th:errorclass="field-error">
-                <div class="field-error" th:errors="*{memId}" />
-            </div>
-            <div>
-                <label for="memPwd">비밀번호</label>
-                <input type="password" id="memPwd" th:field="*{pwd}"
-                       class="formcontrol"
-                       th:errorclass="field-error">
-                <div class="field-error" th:errors="*{pwd}" />
-            </div>
-            <div>
-                <label for="pwdConfirm">비밀번호 재확인</label>
-                <input type="password" id="pwdConfirm" th:field="*{pwdConfirm}"
-                       class="formcontrol"
-                       th:errorclass="field-error">
-                <div class="field-error" th:errors="*{pwdConfirm}" />
-            </div>
-            <div>
-                <label for="nickname">닉네임</label>
-                <input type="text" id="nickname" th:field="*{nickname}"
-                       class="formcontrol"
-                       th:errorclass="field-error">
-                <div class="field-error" th:errors="*{nickname}" />
-            </div>
-
-            <div>
-                <label for="loc">내 동네</label>
-                <select id="loc" th:field="*{loc}" th:onchange="locTest()">
+                <label for="locSocial">내 동네</label>
+                <select id="locSocial"  th:onchange="locTest()" name="locSocial">
                     <option th:each="locValue:${T(com.exercise.carrotproject.domain.enumList.Loc).values()}"
                             th:value="${locValue}"
                             th:text="${locValue.locName}"></option>
                 </select>
-                <div class="field-error" th:errors="*{loc}"> </div>
             </div>
+            <div>
+                <label for="nicknameSocial">닉네임</label>
+                <input type="text" id="nicknameSocial"
+                       class="formcontrol"
+                       th:value="${userInfo.get('nickname')}">
+                <div id="nick-error"/>
+            </div>
+            <hr class="my-4">
+            <div class="row">
+                <div class="col">
+                    <button class="w-100 btn btn-secondary btn-lg"
+                            onclick="location.href='/'"
+                            id="socialCancelBtn"
+                            type="button">취소</button>
+                </div>
+                <div class="col">
+                    <button class="w-100 btn btn-secondary btn-lg"
+                            onclick="location.href='/member/loginForm'"
+                            id="socialCancelBtn2"
+                            th:onclick="|location.href='@{/login}'|"
+                            type="button">로그인 폼으로</button>
+                </div>
+                <div class="col">
+                    <button class="w-100 btn btn-primary btn-lg"
+                            th:onclick="signupSocialMember([[${platform}]])"
+                            type="button"> 회원 가입 </button>
+                </div>
+            </div>
+        </form>
+    </div><!--role:social form-->
+
+    <div th:unless="${isSocial}">
+    <form action="" th:action th:object="${signupForm}" method="post">
+        <h4 class="mb-3">회원 정보 입력</h4>
+        <div>
+            <label for="memId">아이디</label>
+            <input type="text" id="memId" th:field="*{memId}"
+                   class="formcontrol"
+                   th:errorclass="field-error">
+            <div class="field-error" th:errors="*{memId}" />
+        </div>
+        <div>
+            <label for="memPwd">비밀번호</label>
+            <input type="password" id="memPwd" th:field="*{pwd}"
+                   class="formcontrol"
+                   th:errorclass="field-error">
+            <div class="field-error" th:errors="*{pwd}" />
+        </div>
+        <div>
+            <label for="pwdConfirm">비밀번호 재확인</label>
+            <input type="password" id="pwdConfirm" th:field="*{pwdConfirm}"
+                   class="formcontrol"
+                   th:errorclass="field-error">
+            <div class="field-error" th:errors="*{pwdConfirm}" />
+        </div>
+        <div>
+            <label for="nickname">닉네임</label>
+            <input type="text" id="nickname" th:field="*{nickname}"
+                   class="formcontrol"
+                   th:errorclass="field-error">
+            <div class="field-error" th:errors="*{nickname}" />
+        </div>
+        <div>
+            <label for="loc">내 동네</label>
+            <select id="loc" th:field="*{loc}" th:onchange="locTest()">
+                <option th:each="locValue:${T(com.exercise.carrotproject.domain.enumList.Loc).values()}"
+                        th:value="${locValue}"
+                        th:text="${locValue.locName}"></option>
+            </select>
+            <div class="field-error" th:errors="*{loc}"> </div>
         </div>
         <hr class="my-4">
         <div class="row">
@@ -94,45 +134,63 @@
                 <button class="w-100 btn btn-primary btn-lg"
                         type="submit"> 회원 가입 </button>
             </div>
-            <div class="col" th:if="${isSocial}">
-                <button class="w-100 btn btn-primary btn-lg"
-                        th:onclick="setMyLoc([[${platform}]])"
-                        type="button"> 회원 가입 </button>
-            </div>
         </div>
-    </form>
+        </form>
+    </div> <!--role:user form-->
 </div> <!-- /form-container -->
 </div>
 
 <div layout:fragment="script" th:inline="javascript">
 <!--  <script type="text/javascript" src="http://map.vworld.kr/js/vworldMapInit.js.do?version=2.0&apiKey=[593AE8E8-EC6D-350F-8E69-BC6C4E15A535]"></script>-->
 <script th:inline="javascript">
-    const isSocial= [[${isSocial}]];
-    console.log(isSocial)
-    window.onload = function () {
-        if(isSocial) {
-            alert("망고마켓 서비스를 이용하기 위해서는 내 동네 설정이 필요합니다.")
-        }
-    }
-
-    function setMyLoc(wherePlatform) {
-        console.log(wherePlatform);
+    function signupSocialMember(platform) {
+        console.log($('#profPath').val())
         $.ajax({
             type: 'post',
-            url: '/signup/'+wherePlatform,
+            url: '/signup/'+platform,
             data:  JSON.stringify({
                 loc : $("select[name=locSocial]").val(),
-                 }),
-            contentType: "application/json",
+                nickname : $('#nicknameSocial').val(),
+                email : $('#email').val(),
+                profPath : $('#profPath').val(),
+            }),
+            contentType: "application/json; charset=utf-8",
             success: function (data) {
-                alert("내동네 등록에 성공했습니다.");
+                alert("회원가입에 성공했습니다");
                 location.href="/"
             },
             error: function (err) {
-                console.log(err);
-                alert("내동네 등록에 실패했습니다.");
+                const message = err.responseJSON;
+                console.log(message);
+                console.log(message.nickname);
+                $('#nick-error').replaceWith(`<div id="nick-error" class="field-error">${message.nickname}</div>`)
+                $("#nicknameSocial").addClass("field-error-border");
             }
         })
     }
+    $('#socialCancelBtn').on("click", function(){
+        $.ajax({
+            type: 'get',
+            url: '/unlink/kakao',
+            success: function (data) {
+                location.href="/";
+            },
+            error: function (err) {
+                console.log(err);
+            }
+        })
+    });
+    $('#socialCancelBtn2').on("click", function(){
+        $.ajax({
+            type: 'get',
+            url: '/unlink/kakao',
+            success: function (data) {
+                location.href="/login";
+            },
+            error: function (err) {
+                console.log(err);
+            }
+        })
+    });
 </script>
 </div>
