--- a/src/main/resources/templates/memberHome.html
+++ b/src/main/resources/templates/memberHome.html
@@ -49,7 +49,7 @@
     </div>
     <hr>
 
-    <h3 th:text="|${member.memId}님|"></h3>
+    <h3 th:text="|${member.nickname}님|"></h3>
     <p th:text="|${member.nickname}님의 매너온도 : ${member.mannerScore}|"></p>
     <span th:text="|${member.nickname}님의 판매상품 : ${countPost}개|"></span> <button type="button"> >이동</button> <br/>
     <hr>
