--- a/src/main/resources/templates/post/detail.html
+++ b/src/main/resources/templates/post/detail.html
@@ -327,7 +327,7 @@
                         if(result == "판매완료"){
                             let trueFalse = confirm("거래후기를 작성하시겠습니까?")
                             if(trueFalse==true){
-                                location.href=`/chat/chatRoomListByPost/${postId}`;
+                                location.href=`/post/tradeReview/${postId}`;
                             }
                         }
                     },
