--- a/src/main/resources/templates/myPage/sellList.html
+++ b/src/main/resources/templates/myPage/sellList.html
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 </div>
-                <a th:href="@{/post/tradeReview/{postId}(postId=${soldPost.postId})}">거래후기 보내기</a>
+                <a th:href="@{/post/buyers/{postId}(postId=${soldPost.postId})}">거래후기 보내기</a>
             </div>
         </div>
     </div>
