--- a/src/main/resources/templates/chat/chat.html
+++ b/src/main/resources/templates/chat/chat.html
@@ -12,40 +12,43 @@
         <!-- selected chat -->
         <div class="col-md-15 bg-white ">
             <div class="chat-message">
-                <ul id="chatting" class="chat">
-                    <th:block th:each="chat : ${chatList}">
-                        <li th:if="${session.loginMember.memId}==${chat.from.memId}" class="right clearfix">
-                            <span class="chat-img pull-right">
-                                <img th:src="|/members/${chat.from.memId}/profileImg|" alt="User Avatar">
-                            </span>
-                            <div class="chat-body clearfix">
-                                <div class="header">
-                                    <strong class="primary-font">[[${chat.from.memId}]]</strong>
-                                    <small class="pull-right text-muted"><i class="fa fa-clock-o"></i>[[${chat.getCreatedTimeByString()}]]</small>
+                <th:block th:if="${chatSectionList != null}">
+                    <th:block th:each="chatSection : ${chatSectionList.keySet()}">
+                        [[${chatSection}]]
+                        <ul class="chatting chat" th:each="chat : ${chatSectionList.get(chatSection)}">
+                            <li th:if="${session.loginMember.memId}==${chat.from.memId}" class="right clearfix">
+                                <span class="chat-img pull-right">
+                                    <img th:src="|/members/${chat.from.memId}/profileImg|" alt="User Avatar">
+                                </span>
+                                <div class="chat-body clearfix">
+                                    <div class="header">
+                                        <strong class="primary-font">[[${chat.from.memId}]]</strong>
+                                        <small class="pull-right text-muted"><i class="fa fa-clock-o"></i>[[${chat.getCreatedTimeByString()}]]</small>
+                                    </div>
+                                    <p>
+                                        [[${chat.message}]]
+                                    </p>
+                                    <hr>
+                                    <span class="read_state" th:text="${chat.readState.readStateName}"></span>
                                 </div>
-                                <p>
-                                    [[${chat.message}]]
-                                </p>
-                                <hr>
-                                <span class="read_state" th:text="${chat.readState.readStateName}"></span>
-                            </div>
-                        </li>
-                        <li th:unless="${session.loginMember.memId}==${chat.from.memId}" class="left clearfix">
-                            <span class="chat-img pull-left">
-                                <img th:src="|/members/${chat.from.memId}/profileImg|" alt="User Avatar">
-                            </span>
-                            <div class="chat-body clearfix">
-                                <div class="header">
-                                    <strong class="primary-font">[[${chat.from.memId}]]</strong>
-                                    <small class="pull-right text-muted"><i class="fa fa-clock-o"></i>[[${chat.getCreatedTimeByString()}]]</small>
+                            </li>
+                            <li th:unless="${session.loginMember.memId}==${chat.from.memId}" class="left clearfix">
+                                <span class="chat-img pull-left">
+                                    <img th:src="|/members/${chat.from.memId}/profileImg|" alt="User Avatar">
+                                </span>
+                                <div class="chat-body clearfix">
+                                    <div class="header">
+                                        <strong class="primary-font">[[${chat.from.memId}]]</strong>
+                                        <small class="pull-right text-muted"><i class="fa fa-clock-o"></i>[[${chat.getCreatedTimeByString()}]]</small>
+                                    </div>
+                                    <p>
+                                        [[${chat.message}]]
+                                    </p>
                                 </div>
-                                <p>
-                                    [[${chat.message}]]
-                                </p>
-                            </div>
-                        </li>
+                            </li>
+                        </ul>
                     </th:block>
-                </ul>
+                </th:block>
             </div>
             <div class="chat-box bg-white">
                 <div class="input-group">
@@ -74,7 +77,7 @@
         stompClient2.connect({}, function () {
                 //subscribe(subscribe url,해당 url로 메시지를 받을때마다 실행할 함수)
                 //게시글번호/판매자/구매자
-                sub = stompClient2.subscribe('/topic/chat/' + [[${postId}]] + "/" + [[${seller}]] + "/" + [[${buyer}]], function (e) {
+                sub = stompClient2.subscribe('/topic/chat/' + [[${postId}]] + "/" + [[${sellerId}]] + "/" + [[${buyerId}]], function (e) {
                     //e.body에 전송된 data가 들어있다
                     if (JSON.parse(e.body).readComplete == "readComplete") {
                         $(".read_state").text("읽음");
@@ -97,6 +100,8 @@
     //화면에 메시지를 표시하는 함수
     function showMessage2(data) {
         console.log('채팅메세지를 수신하였습니다.')
+        console.log(data.imgState);
+        console.log(data.imgList);
         let message;
         if ([[${session.loginMember.memId}]] == data.from) {
             message =
@@ -131,14 +136,14 @@
 
             $.ajax({
                 type: "POST",
-                url: "/chat/getChatMsg/" + data.room,
+                url: "/chat/getChatMsg/" + data.room + "/" + [[${postId}]] + "/" + [[${sellerId}]] + "/" + [[${buyerId}]],
                 success: function (result) {
                     console.log('수신한 메세지 확인 처리 완료! >>> ' + result);
                     $('#chat').text(Number($('#chat').text()) - 1);
                 },
             });
         }
-        $('#chatting').append(message);
+        $('.chatting').last().append(message);
     }
 
     //엔터 눌렀을때 전송
@@ -148,16 +153,15 @@
 
     //메시지 브로커로 메시지 전송
     function send() {
-        stompClient2.send("/app/chat/" + [[${postId}]] + "/" + [[${seller}]] + "/" + [[${buyer}]], {}, $("#msg").val());
+        stompClient2.send("/app/chat/" + [[${postId}]] + "/" + [[${sellerId}]] + "/" + [[${buyerId}]], {}, JSON.stringify({message:$("#msg").val()}));
         $("#msg").val('');
     }
 
     function sendImg() {
-        console.log("이미지 전송!!");
-        $("#fildUpload").click();
+        $("#fileUpload").click();
     }
 
-    $("#fildUpload").change(e=>{
+    $("#fileUpload").change(e=>{
         let files = e.target.files;
         console.log(files);
 
@@ -173,6 +177,19 @@
                 alert('gif, jpg, png 파일만 선택해 주세요.\n\n현재 파일 : ' + files[i].name);
                 return false;
             }
+        }
+
+        let images = [];
+        for (let i = 0; i < files.length; i++) {
+            let FR = new FileReader();
+            FR.onload = function(e) {
+                images.push(e.target.result);
+                if (images.length === files.length) {
+                    stompClient2.send("/app/chat/" + [[${postId}]] + "/" + [[${sellerId}]] + "/" + [[${buyerId}]], {}, JSON.stringify({message:"이미지 전송", imgCode:images}));
+                    // $("#msg").val('');
+                }
+            };
+            FR.readAsDataURL(files[i]);
         }
     });
 </script>
