채팅방 업데이트
채팅방 업데이트

--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -105,12 +105,18 @@ small, .small {
   background: #f9f9f9;
 }
 
-.chat li img {
+.chat li .chat-img img {
   width: 45px;
   height: 45px;
   border-radius: 50em;
   -moz-border-radius: 50em;
   -webkit-border-radius: 50em;
+}
+
+.chat li .chatImg {
+  width: 200px;
+  height: 200px;
+  border: 1px solid black;
 }
 
 img {
