--- a/src/main/resources/templates/post/update_post.html
+++ b/src/main/resources/templates/post/update_post.html
@@ -27,8 +27,8 @@
                 <div class="file-box">
                     <!--이미지-->
                     <div class="inputFile">
-                        <label for='inputImage' class="addImgBtn">+</label>
-                        <input type="file" multiple="multiple" name="uploadFiles" id='inputImage' accept="image/*">
+                        <label for='inputImage' class="addImgBtn">사진추가</label>
+                        <input type="file" multiple="multiple" name="uploadFiles" id='inputImage' accept="image/*" style="display: none;">
                     </div>
                     <!--이미지 미리보기-->
                     <ul id="prePreview" class="sortable" >
@@ -63,45 +63,145 @@
                 <textarea class="form-control" id="productsDescription" name="content" rows="10" th:utext="${post.content}"></textarea>
             </div>
 
-            <div class="form-group form-car-mileage">
-                <input type="text" class="form-control" id="carMileage" name="wishPlace" th:value="${post.wishPlace}">
-            </div>
+
             <!--숨김여부, 판매여부 hidden-->
             <input type="hidden" name="hideState" th:value="${post.hideState}" />
             <input type="hidden" name="sellState" th:value="${post.sellState}" />
 
-            <!--            <div class="form-group form-car-smoking">-->
-<!--                <label>차량 판매자 흡연 여부</label>-->
-<!--                <div class="form-check form-check-inline form-check-smoking">-->
-<!--                    <input class="form-check-input" type="radio" name="smokingOptions" id="inlineSmoker" value="true">-->
-<!--                    <label class="form-check-label smoker" for="inlineSmoker">예, 흡연자 입니다.</label>-->
-<!--                </div>-->
-<!--                <div class="form-check form-check-inline form-check-nonsmoking">-->
-<!--                    <input class="form-check-input" type="radio" name="smokingOptions" id="inlineNonSmoker" value="false">-->
-<!--                    <label class="form-check-label non-smoker" for="inlineNonSmoker">아니오, 비 흡연자 입니다.</label>-->
-<!--                </div>-->
-<!--            </div>-->
-            <button type="button" id="uploadBtn" class="btn btn-primary btn-submit">상품 등록하기</button>
         </form>
+
+
+        <!--거래희망장소-->
+        <button id="regPlace" type="button">거래희망장소 선택하기</button>
+        <!--카카오맵 지도-->
+        <div id="mapArea">
+            <p style="font-weight: bold;">거래 희망하는 장소를 지도에서 클릭해주세요!</p>
+
+            <div id="map" style="width:100%;height:350px; margin: 20px;"></div>
+
+            <div id="inputPlace" class="form-group form-car-mileage" style="display: none;">
+                <input type="text" class="form-control" id="placeInfo" name="placeInfo" th:value="${mtPlace?.placeInfo}" placeholder="장소명을 입력해주세요. 예)강남역 1번 출구">
+            </div>
+            <button id="cfmPlace" type="button" style="display: none;">장소선택하기</button>
+
+            <!--                <div id="clickLatlng"></div>-->
+            <button id="noPlace" type="button" >장소선택 안함</button>
+        </div>
+
+        <br/><br/>
+        <button type="button" id="uploadBtn" class="btn btn-primary btn-submit">상품 등록하기</button>
+
     </div>
 
-    <footer>
-        <div class="container">
-            <a href="board.html">2019 당근 마켓</a>
-            <h6>Copyright © Danggeun Market Inc. All rights reserved.</h6>
-        </div>
-    </footer>
 
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>-->
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
-<!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.2/bootstrap-slider.js" integrity="sha256-59/apVFrosMLFX2dHZLGvb3nPpu7e0Yx1rsDr1dTRrk=" crossorigin="anonymous"></script>-->
 
 
 <!--jquery CDN-->
 <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+<!--지도API-->
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e133f6ea3b90b5b74b80864ba7037219"></script>
 
-    <script>
+    <script th:inline="javascript">
+
+        //위도,경도 초기값
+        var lat= [[${mtPlaceDto?.getLat()}]];
+        var lon= [[${mtPlaceDto?.getLon()}]];
+        var placeInfo = document.getElementById('placeInfo').value;;
+
+        if(lat==null || lon==null){
+            lat=[[${session.loginMember.getLoc().getLat()}]];
+            lon= [[${session.loginMember.getLoc().getLon()}]];
+        }
+
+        <!--지도 띄우기-->
+        var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+            mapOption = {
+                center: new kakao.maps.LatLng(lat, lon), // 지도의 중심좌표
+                level: 3 // 지도의 확대 레벨
+            };
+
+        var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+
+        // 지도를 클릭한 위치에 표출할 마커입니다
+        var marker = new kakao.maps.Marker({
+            // 지도 중심좌표에 마커를 생성합니다
+            position: map.getCenter()
+        });
+
+        // 지도에 마커를 표시합니다
+        marker.setMap(map);
+
+
+
+
+
+        // 지도에 클릭 이벤트를 등록합니다
+        // 지도를 클릭하면 마지막 파라미터로 넘어온 함수를 호출합니다
+        kakao.maps.event.addListener(map, 'click', function(mouseEvent) {
+
+
+            // 클릭한 위도, 경도 정보를 가져옵니다
+            var latlng = mouseEvent.latLng;
+
+            // 마커 위치를 클릭한 위치로 옮깁니다
+            marker.setPosition(latlng);
+
+            //장소정보 입력창 보이기
+            document.getElementById('inputPlace').style.display='block';
+            document.getElementById('cfmPlace').style.display="inline-block";
+        });
+        //'장소선택하기'버튼 클릭시 위도,경도,장소정보 set
+        document.getElementById('cfmPlace').addEventListener('click',function () {
+            lat = marker.getPosition().getLat();
+            lon = marker.getPosition().getLng();
+            placeInfo = document.getElementById('placeInfo').value;
+
+            console.log("장소선택클릭시:lat, lon, placeInfo:", lat, lon, placeInfo);
+            if (!placeInfo){ //문자열 비어있을 때 true를 반환
+                alert("장소명을 입력해주세요.")
+            } else if (!lat || !lon){
+                alert("거래희망장소를 지도에서 클릭해주세요.")
+            } else {
+                console.log("마커의 lat:{}, lon:{}, placeinfo:{}", lat, lon, placeInfo);
+                $('#mapArea').hide();
+                $('#uploadBtn').show();
+            }
+        });
+
+
+        //지도 숨겼다가 거래희망장소등록 버튼 클릭시 보이기 (지도생성 코드 아래에 위치하기)
+        $('#mapArea').hide();
+
+        $('#regPlace').click(function (){
+            $('#mapArea').show();
+            relayout();
+            //업로드버튼 숨기기
+            $('#uploadBtn').hide();
+        });
+
+        //장소선택안함 클릭시
+        $('#noPlace').click(function (){
+            $('#mapArea').hide();
+            lat=0;
+            lon=0;
+            placeInfo="";
+            marker.setMap(null);
+            document.getElementById('placeInfo').value=null;
+            console.log("장소선택안함클릭시 lat:{}, lon:{}, placeinfo:{}", lat, lon, placeInfo);
+
+            //업로드버튼 보이기
+            $('#uploadBtn').show();
+
+        })
+
+        function relayout() {
+            map.relayout();
+        }
+
+       //--------지도끝-------------------------------------------------
+
+
+
 
         //삭제한 미리보기 이미지들을 담는 리스트
         var imgIdList = new Array();
@@ -187,18 +287,22 @@
 
 
 
-        //게시글 업로드
+        //게시글 업로드--------------------------------------------------------------
         $('#uploadBtn').click(function( ) {
 
             var uploadForm = $('#upload_form')[0];
             var formData = new FormData(uploadForm);
             formData.append("imgIdList", imgIdList) //삭제할 기존 이미지id 담은 리스트
+            formData.append("lat", lat);
+            formData.append("lon", lon);
+            formData.append("placeInfo", placeInfo);
+
             //formData 출력
             // for (let key of formData.keys()) {
             //     console.log(key, ":", formData.get(key));
             // }
 
-            //수정한 게시글 업로드
+            //실제 업로드
             let postId = [[${post.postId}]];
             console.log("postId:"+postId);
             $.ajax({
