--- a/src/main/resources/templates/post/upload_page.html
+++ b/src/main/resources/templates/post/upload_page.html
@@ -52,7 +52,7 @@
             <div class="form-group form-category">
                 <select id="productsCategory" class="form-control" name="category">
                     <option value="" disabled selected>카테고리를 선택해주세요.</option>
-                    <!--thymeleaf이용해 Enum클래스 정보 바로 가져오기-->
+                    <!--카테고리: thymeleaf이용해 Enum클래스 정보 바로 가져오기-->
                     <option th:each = "categoryList:${T(com.exercise.carrotproject.domain.enumList.Category).values()}" th:value="${categoryList.name}" th:text="${categoryList.category}"></option>
 
                 </select>
@@ -94,16 +94,11 @@
 
 
 
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>-->
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
-<!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.2/bootstrap-slider.js" integrity="sha256-59/apVFrosMLFX2dHZLGvb3nPpu7e0Yx1rsDr1dTRrk=" crossorigin="anonymous"></script>-->
-
-
 <!--jquery CDN-->
 <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
 <!--jquery UI CDN(드래그앤드롭)-->
-<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js" integrity="sha256-lSjKY0/srUM9BE3dPm+c4fBo1dky2v27Gdjm2uoZaL0=" crossorigin="anonymous"></script>
+<!--<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js" integrity="sha256-lSjKY0/srUM9BE3dPm+c4fBo1dky2v27Gdjm2uoZaL0=" crossorigin="anonymous"></script>-->
+
 <!--지도API: head, body 등 어떠한 위치에 넣어도 상관없지만, 반드시 실행 코드보다 먼저 선언되어야 합니다.-->
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e133f6ea3b90b5b74b80864ba7037219"></script>
 <script th:inline="javascript">
@@ -185,12 +180,12 @@
             $('#uploadBtn').hide();
         });
 
-        //장소선택안함 클릭시 지도 숨기기
+        //장소선택안함 클릭시
         $('#noPlace').click(function (){
             $('#mapArea').hide();
-            lat=null;
-            lon=null;
-            placeInfo=null;
+            lat=0;
+            lon=0;
+            placeInfo="";
             marker.setMap(null);
             document.getElementById('placeInfo').value=null;
             console.log("장소선택안함클릭시 lat:{}, lon:{}, placeinfo:{}", lat, lon, placeInfo);
@@ -348,10 +343,11 @@
         //게시글 업로드-----------------------------------------------
         $('#uploadBtn').click(function( ) {
 
-            var uploadForm = $('#upload_form')[0]; //$(...) 하면 객체 하나가 리턴
-            var formData = new FormData(uploadForm); //FormData에는 객체가 들어가지 못함. so객체에서 인덱스로 뽑아옴.
-
+            var uploadForm = $('#upload_form'); //$(...) 하면 객체 하나가 리턴
             // var mapData = { "lat": lat, "lon": lon, "placeInfo": placeInfo};
+
+            var formData = new FormData(uploadForm[0]); //FormData에는 객체가 들어가지 못함. so객체에서 인덱스로 뽑아옴.
+
             formData.append("lat", lat);
             formData.append("lon", lon);
             formData.append("placeInfo", placeInfo);
