--- a/src/main/resources/templates/chat/chat.html
+++ b/src/main/resources/templates/chat/chat.html
@@ -21,7 +21,7 @@
                             <div class="chat-body clearfix">
                                 <div class="header">
                                     <strong class="primary-font">[[${chat.from.memId}]]</strong>
-                                    <small class="pull-right text-muted"><i class="fa fa-clock-o"></i>[[${chat.getCreatedTimeByString()}]]</small>
+                                    <small class="pull-right text-muted"><i class="fa fa-clock-o"></i>[[${chat.getCalculatedTimeForChat()}]]</small>
                                 </div>
                                 <p>
                                     [[${chat.message}]]
@@ -37,7 +37,7 @@
                             <div class="chat-body clearfix">
                                 <div class="header">
                                     <strong class="primary-font">[[${chat.from.memId}]]</strong>
-                                    <small class="pull-right text-muted"><i class="fa fa-clock-o"></i>[[${chat.getCreatedTimeByString()}]]</small>
+                                    <small class="pull-right text-muted"><i class="fa fa-clock-o"></i>[[${chat.getCalculatedTimeForChat()}]]</small>
                                 </div>
                                 <p>
                                     [[${chat.message}]]
