--- a/src/main/resources/templates/post/update_post.html
+++ b/src/main/resources/templates/post/update_post.html
@@ -79,7 +79,7 @@
 
             <div id="map" style="width:100%;height:350px; margin: 20px;"></div>
 
-            <div id="inputPlace" class="form-group form-car-mileage" style="display: none;">
+            <div id="inputPlace" class="form-group form-car-mileage">
                 <input type="text" class="form-control" id="placeInfo" name="placeInfo" th:value="${mtPlace?.placeInfo}" placeholder="장소명을 입력해주세요. 예)강남역 1번 출구">
             </div>
             <button id="cfmPlace" type="button" style="display: none;">장소선택하기</button>
@@ -102,34 +102,58 @@
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e133f6ea3b90b5b74b80864ba7037219"></script>
 
     <script th:inline="javascript">
-
         //위도,경도 초기값
-        var lat= [[${mtPlaceDto?.getLat()}]];
-        var lon= [[${mtPlaceDto?.getLon()}]];
-        var placeInfo = document.getElementById('placeInfo').value;;
+        var lat= [[${mtPlace?.getLat()}]];
+        var lon= [[${mtPlace?.getLon()}]];
+        var placeInfo = document.getElementById('placeInfo').value;
+        console.log("lat,lon,placeInfo 초기값:", lat, lon, placeInfo);
 
+        //거래희망장소 null일 때
         if(lat==null || lon==null){
-            lat=[[${session.loginMember.getLoc().getLat()}]];
-            lon= [[${session.loginMember.getLoc().getLon()}]];
+            lat=0;
+            lon=0;
+            placeInfo="";
+            var initLat= [[${session.loginMember.getLoc().getLat()}]];
+            var initLon= [[${session.loginMember.getLoc().getLon()}]];
+            <!--지도 띄우기-->
+            var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+                mapOption = {
+                    center: new kakao.maps.LatLng(initLat, initLon), // 지도의 중심좌표
+                    level: 3 // 지도의 확대 레벨
+                };
+
+            var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+
+            // 지도를 클릭한 위치에 표출할 마커입니다
+            var marker = new kakao.maps.Marker({
+                // 지도 중심좌표에 마커를 생성합니다
+                position: map.getCenter()
+            });
+            // 지도에 마커를 표시합니다
+            marker.setMap(map);
+
+        } else{
+
+            <!--지도 띄우기-->
+            var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+                mapOption = {
+                    center: new kakao.maps.LatLng(lat, lon), // 지도의 중심좌표
+                    level: 3 // 지도의 확대 레벨
+                };
+
+            var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+
+            // 지도를 클릭한 위치에 표출할 마커입니다
+            var marker = new kakao.maps.Marker({
+                // 지도 중심좌표에 마커를 생성합니다
+                position: map.getCenter()
+            });
+            // 지도에 마커를 표시합니다
+            marker.setMap(map);
+
         }
 
-        <!--지도 띄우기-->
-        var mapContainer = document.getElementById('map'), // 지도를 표시할 div
-            mapOption = {
-                center: new kakao.maps.LatLng(lat, lon), // 지도의 중심좌표
-                level: 3 // 지도의 확대 레벨
-            };
 
-        var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
-
-        // 지도를 클릭한 위치에 표출할 마커입니다
-        var marker = new kakao.maps.Marker({
-            // 지도 중심좌표에 마커를 생성합니다
-            position: map.getCenter()
-        });
-
-        // 지도에 마커를 표시합니다
-        marker.setMap(map);
 
 
 
@@ -146,9 +170,9 @@
             // 마커 위치를 클릭한 위치로 옮깁니다
             marker.setPosition(latlng);
 
-            //장소정보 입력창 보이기
-            document.getElementById('inputPlace').style.display='block';
-            document.getElementById('cfmPlace').style.display="inline-block";
+            //장소정보 입력창 숨기기, 장소선택 버튼 보이기
+            // document.getElementById('inputPlace').style.display='block';
+            // document.getElementById('cfmPlace').style.display="inline-block";
         });
         //'장소선택하기'버튼 클릭시 위도,경도,장소정보 set
         document.getElementById('cfmPlace').addEventListener('click',function () {
@@ -177,6 +201,9 @@
             relayout();
             //업로드버튼 숨기기
             $('#uploadBtn').hide();
+            //장소선택버튼 보이기
+            $('#cfmPlace').show();
+
         });
 
         //장소선택안함 클릭시
