--- a/src/main/resources/templates/chat/chat.html
+++ b/src/main/resources/templates/chat/chat.html
@@ -26,8 +26,7 @@
                             </span>
                             <div class="chat-body clearfix">
                                 <div class="header">
-
-                                    <strong class="primary-font">[[${chat.from.memId}]]</strong>
+                                    <strong class="primary-font">[[${chat.fromId}]]</strong>
                                     <small class="pull-right text-muted"><i class="fa fa-clock-o"></i>[[${chat.getCalculatedTimeForChat()}]]</small>
 
                                 </div>
@@ -48,7 +47,7 @@
                             <div class="chat-body clearfix">
                                 <div class="header">
 
-                                    <strong class="primary-font">[[${chat.from.memId}]]</strong>
+                                    <strong class="primary-font">[[${chat.fromId}]]</strong>
                                     <small class="pull-right text-muted"><i class="fa fa-clock-o"></i>[[${chat.getCalculatedTimeForChat()}]]</small>
 
                                 </div>
