--- a/src/main/resources/templates/chat/chatRoomListByPost.html
+++ b/src/main/resources/templates/chat/chatRoomListByPost.html
@@ -16,7 +16,7 @@
             <ul class="friend-list">
                 <th:block th:each="chatRoom : ${chatRoomList}">
                 <li th:id="'roomId'+${chatRoom.roomId}">
-                    <a th:href="@{/chat/chatRoom/{roomId}(roomId=${chatRoom.roomId})}" class="clearfix">
+                    <a th:href="@{/chat/chatRoom/{roomId}/{postId}/{sellerId}/{buyerId}/(roomId=${chatRoom.roomId}, postId=${chatRoom.postId}, sellerId=${chatRoom.sellerId}, buyerId=${chatRoom.buyerId})}" class="clearfix">
                         <div class="profile_img">
                             <img th:if="${chatRoom.buyerId == session.loginMember.memId}" th:src="|/members/${chatRoom.sellerId}/profileImg|" alt="프로필이미지(판매자)">
                             <img th:unless="${chatRoom.buyerId == session.loginMember.memId}" th:src="|/members/${chatRoom.buyerId}/profileImg|" alt="프로필이미지(구매자)">
