--- a/src/main/resources/templates/member/memberInfo.html
+++ b/src/main/resources/templates/member/memberInfo.html
@@ -30,8 +30,6 @@
         <button class="w-50 btn btn-secondary btn-group-sm"
                 type="button"  th:onclick="|location.href='@{/members/{memId}/trade/buyList(memId=${session.loginMember.memId})}'|">구매내역 보기</button>
         <div style="height: 10px"></div>
-        <!--<button class="w-50 btn btn-secondary btn-group-sm"
-                 type="button" th:onclick="|location.href='@{/members/{memId}/transaction/sellList(memId=${session.loginMember.memId})}'|">판매완료내역 보기</button>-->
 
 
 
@@ -102,6 +100,9 @@
 
     <br/>
     <br/>
+    <button class="w-50 btn btn-secondary btn-group-sm"
+            type="button" th:onclick="|location.href='@{/members/{memId}/trade/sellList(memId=${session.loginMember.memId})}'|">관심목록</button>
+
     <button class="w-50 btn btn-secondary btn-group-sm"
             type="button" th:onclick="|location.href='@{/members/{memId}/trade/sellList(memId=${session.loginMember.memId})}'|">판매내역</button>
 
