--- a/src/main/resources/templates/post/detail.html
+++ b/src/main/resources/templates/post/detail.html
@@ -387,7 +387,7 @@
                     success: function(result){
                         console.log(result);
                         //화면 처리
-                        alert(result+"로 변경되었습니다.");
+                        alert(result+"(으)로 변경되었습니다.");
 
                         if(result == "판매완료"){
                             let trueFalse = confirm("거래후기를 작성하시겠습니까?")
